--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,34 +7,45 @@ android {
         applicationId "org.ebookdroid"
         minSdkVersion 8
         targetSdkVersion 16
+
+
+        ndk {
+            abiFilters 'armeabi-v7a','x86'
+        }
+
+      //  ndk {
+      //      // 设置支持的SO库架构
+      //      abiFilters 'armeabi-v7a','x86' //, 'arm64-v8a', //,'armeabi', 'x86_64',
+      //  }
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
-     //  sourceSets {
-     //      main {
-     //          jni.srcDirs = []
-     //     //     jniLibs.srcDirs  'src/main/jni'
-     //      }
-     //  }
+      // sourceSets {
+      //     main {
+      //         jni.srcDirs = []
+      //         jniLibs.srcDirs  'src/main/jni'
+      //     }
+      // }
     }
-   externalNativeBuild{
-       ndkBuild{
-           path "src/main/jni/Android.mk"
-       }
-   }
-    //  sourceSets {
-    //      main {
-    //          jni.srcDirs = []
-    //     //     jniLibs.srcDirs  'src/main/jni'
-    //      }
-    //  }
-  //  ndk {
-  //      // 设置支持的SO库架构
-  //      abiFilters  'arm64-v8a', 'armeabi-v7a' ,'x86'//,'armeabi', 'x86_64',
+  //  externalNativeBuild {
+  //      cmake {
+  //          path '/src/main/jni/CMakeLists.txt'
+  //          // arguments '-DANDROID_PLATFORM=android-16',
+  //          //         '-DANDROID_TOOLCHAIN=clang', '-DANDROID_STL=c++_shared', '-DCMAKE_BUILD_TYPE=Release ..'
+  //          //cFlags "-O3"  //-std=c++11
+  //          //cFlags "-DHAVE_CONFIG_H","-DTHREADMODEL=POSIXTHREADS","-DDEBUGLVL=4","-D__ANDROID__"
+  //      }
   //  }
+    externalNativeBuild{
+        ndkBuild{
+            path "src/main/jni/Android.mk"
+        }
+    }
+
     lintOptions {
         checkReleaseBuilds false
         // Or, if you prefer, you can continue to check for errors in release builds,
@@ -44,7 +55,7 @@ android {
     productFlavors {
     }
 
-dependencies {
+    dependencies {
     compile 'com.android.support:support-v4:18.0.0'
     compile files('libs/jcifs-1.3.17.jar')
 }
