--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,10 @@
     <uses-feature android:glEsVersion="0x00010001" android:required="true" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <application android:icon="@drawable/application_icon" android:label="@string/app_name" android:name="EBookDroidApp" android:largeHeap="true">
+    <application android:icon="@drawable/application_icon"
+        android:label="@string/app_name"
+        android:name="EBookDroidApp"
+        android:largeHeap="true">
         <activity android:name=".ui.viewer.ViewerActivity" android:configChanges="orientation|keyboardHidden|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
