--- a/app/src/main/jni/CMakeLists.txt
+++ b/app/src/main/jni/CMakeLists.txt
@@ -7,33 +7,18 @@
 
 #设置生成的so动态库最后输出的路径，set后面两个参数，
 # 前面一个是命令，后面是路径。
- set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../jniLibs/${ANDROID_ABI})
+ #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../jniLibs/${ANDROID_ABI})
  #3.head file path，头文件目录
 
-include_directories(
-        ${CMAKE_CURRENT_SOURCE_DIR}
-)
 
-file(GLOB_RECURSE ebookdroid_source_files_cpp "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
-file(GLOB_RECURSE ebookdroid_source_files_c "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
-
-
-#添加环境变量(可选, added by 编程小翁, 博客园)
-set(CMAKE_C_FLAGS -DHAVE_CONFIG_H -DTHREADMODEL=POSIXTHREADS -DDEBUGLVL=4 -D__ANDROID__ -O3)
-
+set(CMAKE_C_FLAGS -DHAVE_CONFIG_H -DTHREADMODEL=POSIXTHREADS -DDEBUGLVL=4 -D__ANDROID__ )
+#set(CMAKE_C_FLAGS -DHAVE_CONFIG_H -DTHREADMODEL=POSIXTHREADS -DDEBUGLVL=4 -D__ANDROID__ -O3)
 #4.设置生成so库的名称，并为源文件提供一个相对路径
-add_library( # Sets the name of the library. # 设置库的名称，也就是生成的so名称，在java代码中加载so库需要与此一致
-             ebookdroid
-             # Sets the library as a shared library.# 将library设置为一个共享库
-             SHARED
-             # Provides a relative path to your source file(s).#为源文件提供一个相对路径,可以使用通配符，也可以一个一个文件的引入
-                #demo.cpp
-                ${ebookdroid_source_files_cpp} #引用上面设置到通配符
-                ${ebookdroid_source_files_c}
-
-             )
-
-
+#set(CMAKE_CXX_STANDARD_LIBRARIES c++_shared)
+add_subdirectory(jpeg)
+add_subdirectory(mupdf)
+add_subdirectory(djvu)
+add_subdirectory(ebookdroid)
  #5.set environment variable，设置环境变量，编译用到的源文件全部都要放到这里，否则编译能够通过，但是执行的时候会出现各种问题，比如"symbol lookup error xxxxx , undefined symbol"
 # SET(TEST_MATH
 # ${DIR_SRCS}
