--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
         minSdkVersion 8
         targetSdkVersion 16
         externalNativeBuild {
-            cmake {
-                //cppFlags "-std=c++11 -frtti -fexceptions"
-                arguments "-DANDROID_STL=c++_shared"
-            }
+      //      cmake {
+      //          //cppFlags "-std=c++11 -frtti -fexceptions"
+      //          arguments "-DANDROID_STL=c++_shared"
+      //      }
 
         ndk{
             abiFilters 'armeabi-v7a','x86'
@@ -36,21 +36,21 @@ android {
       //     }
       // }
     }
-    externalNativeBuild {
-        cmake {
-            path '/src/main/jni/CMakeLists.txt'
-            //arguments "-DANDROID_STL=c++_shared"
-            // arguments '-DANDROID_PLATFORM=android-16',
-            //         '-DANDROID_TOOLCHAIN=clang', '-DANDROID_STL=c++_shared', '-DCMAKE_BUILD_TYPE=Release ..'
-            //cFlags "-O3"  //-std=c++11
-            //cFlags "-DHAVE_CONFIG_H","-DTHREADMODEL=POSIXTHREADS","-DDEBUGLVL=4","-D__ANDROID__"
-        }
-    }
-  //  externalNativeBuild{
-  //      ndkBuild{
-  //          path "src/main/jni/Android.mk"
+  //  externalNativeBuild {
+  //      cmake {
+  //          path '/src/main/jni/CMakeLists.txt'
+  //          //arguments "-DANDROID_STL=c++_shared"
+  //          // arguments '-DANDROID_PLATFORM=android-16',
+  //          //         '-DANDROID_TOOLCHAIN=clang', '-DANDROID_STL=c++_shared', '-DCMAKE_BUILD_TYPE=Release ..'
+  //          //cFlags "-O3"  //-std=c++11
+  //          //cFlags "-DHAVE_CONFIG_H","-DTHREADMODEL=POSIXTHREADS","-DDEBUGLVL=4","-D__ANDROID__"
   //      }
   //  }
+    externalNativeBuild{
+        ndkBuild{
+            path "src/main/jni/Android.mk"
+        }
+    }
 
     lintOptions {
         checkReleaseBuilds false
